[package]
name = "StellarEngines"
version = "0.1.0"
edition = "2021"
authors = ["Alix Macdonald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.*"
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.8.*"
rand = "0.8.*"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3